--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
         "soc-oi"
     ],
     "version": "1.0.0",
-    "main": "index.js",
     "scripts": {
-        "start": "node index.js"
+        "start": "astro dev --host --port 3000",
+        "dev": "astro dev --host --port 3000",
+        "build": "astro build",
+        "preview": "astro preview --host --port 3000"
     },
     "license": "",
     "dependencies": {
         "@types/node": "^25.2.3",
         "express": "^5.2.1"
+    },
+    "devDependencies": {
+        "astro": "^5.17.2"
     }
 }
